# OSRS-API-Wrapper

./: LICENSE  README.md  pyproject.toml
src/GE/: id_table_updater.py
